--- a/settings.ini
+++ b/settings.ini
@@ -3,16 +3,16 @@
 host = github
 lib_name = {lib_name}
 # For Enterprise Git add variable repo_name and company name
-# repo_name = analytics
-# company_name = nike
+repo_name = bpm_compliance
+company_name = valsecco
 
-user = {user}
-# description = A description of your project
+user = {jan-ru}
+description = research proposal
 # keywords = some keywords
-author = {author}
-author_email = {author_email}
+author = {Jan-Ru Muller}
+author_email = {janru.muller@gmail.com}
 # copyright = Put your copyright information here
-branch = {branch}
+branch = {main}
 version = 0.0.1
 min_python = 3.6
 audience = Developers
@@ -22,7 +22,7 @@ custom_sidebar = False
 # Add licenses and see current list in `setup.py`
 license = apache2
 # From 1-7: Planning Pre-Alpha Alpha Beta Production Mature Inactive
-status = 2
+status = 1
 
 # Optional. Same format as setuptools requirements
 # requirements = 
